--- a/consultm/src/Components/ContactUsForm.module.css
+++ b/consultm/src/Components/ContactUsForm.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     padding:48px;
-    width: 100%;
+    width: 75%;
     margin: auto;
     box-sizing: border-box;
 }
@@ -62,6 +62,7 @@ li{
     display:flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-top:50px;
 }
 
 .form-input-fields{
@@ -124,6 +125,7 @@ li{
     border: none;
     padding: 0.5rem;
     width: 50%;
+    min-width:150px;
     margin-top: 1rem;
     font: inherit;
     cursor: pointer;
