--- a/consultm/src/Components/Page.module.css
+++ b/consultm/src/Components/Page.module.css
@@ -93,3 +93,14 @@
   margin:32px;
 }
 
+.canvasContainer{
+  background-color: #8b959a94;
+  width: 500px;
+  height: 500px;
+}
+
+@media (max-width: 768px) {
+  .canvasContainer {
+    width:95%
+  }
+}
